@@ -7,6 +7,7 @@ ikiwiki (2.55) UNRELEASED; urgency=low
     (Simon McVittie)
   * Really fix bug with links to pages with names containing colons. 
     Previous fix mised a few cases.
+  * Avoid troublesome abs_path calls in wrapper setup.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
